@@ -1,8 +1,7 @@
 name="batteries_nothreads"
 version="0.1"
-description="Batteries Included, standard distribution of OCaml libraries (no-threads version)"
-requires="num,bigarray,extlib,str,findlib"
+description="Batteries Included, standard distribution of OCaml libraries (non-thread version)"
+requires="num,bigarray,str,findlib"
 
-
-archive(byte, mt)  = "batteries.cma"
-archive(native,mt) = "batteries.cmxa"
+archive(byte)  ="batteries.cma"
+archive(native)="batteries.cmxa"
