@@ -1,4 +1,4 @@
-name="batteries"
+name="batteries_threads"
 version="0.1"
 description="Batteries Included, standard distribution of OCaml libraries (mt version)"
 requires="num,bigarray,threads,str,findlib"
