@@ -1,2 +1,2 @@
-<*.cmx>: for-pack(Batteries)
-<batteries.ml>: pkg_threads
+<batteries_threads.ml>  :pkg_threads
+<batteries.ml>          :pkg_threads
